<resources>
    <string name="app_name">"NYTimesSearch "</string>
    <string name="action_settings">Settings</string>
    <string name="Search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="action_search">Search</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_values">News Desk Values</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="arts">Arts</string>
    <string name="fashion_style">Fashion &amp; Style</string>
    <string name="sports">sports</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="send_to">Share URL to...</string>
    <string name="enter_a_keyword_to_search">Enter a keyword to search...</string>
</resources>
